mobile/mobile-header.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    background: #fffef8;
}

header {
    margin: 0;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    z-index: 9999;
}

.mid-border {
    display: none;
}

.first-section {
    position: sticky;
    margin: 0;
    padding-left: 3.125rem;
    padding-right: 3.125rem;
    max-height: 3.125rem;
    display: flex;
    background-color: #003aab;
    color: white;
    justify-content: space-evenly;
    flex: 1;
    align-items: center;
}

.first-section-info-links-left {
    display: none;
    min-width: 245px;
}

.first-section-info-middle {
    display: flex;
    justify-content: space-evenly;
    flex: 1;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.first-section-info-middle p{
    font-size: 0.7rem;
    font-family: "National Park", sans-serif;

}

.first-section-info-links-right {
    display: none;
    align-items: center;
    min-width: 245px;
}


.second-section {
    background: #fffef8;
    position: relative;
    display: flex;
    padding: 1rem 3.125rem 0 3.125rem;
    flex: 1;
    justify-content: space-evenly;
    align-items: center;
    font-family: Arial, Helvetica, sans-serif;
    max-width: 1140px;
    box-sizing: border-box;
    margin-left: auto;
    margin-right: auto;
}

.second-section-desktop-menu {
    display: none;
}

.menu-icon-left {
    font-size: 2rem;
}

.menu-icon-right {
    display: none;

}

.left-content {
    display: flex;
    align-items: center;
}

.search-bar {
    display: none;
}

@media (width >=39.375rem) {
    .first-section-info-middle p{
        font-size: 0.9rem;
    }
}

